# gleam_sqlite_benchmarks

./: .dockerignore  .gitignore  README.md  REPORT.md
.github/workflows/: test.yml
docker/: bench.Dockerfile
gleam/: README.md  gleam.toml  manifest.toml
gleam/src/: postgres_tests.gleam  postgres_tests_ffi.erl  sqlite_tests.gleam  sqlite_tests_ffi.erl
gleam/test/: sqlite_tests_test.gleam
ruby/: Gemfile  README.md  benchmark.rb
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust/src/app_request/sql/: count_addons.sql  count_admin_alerts.sql  count_config_problems.sql  count_custom_fields.sql  count_discount_items.sql  count_discounts.sql  count_event_custom_fields.sql  count_events.sql  count_fees.sql  count_products.sql  count_sponsors.sql  count_tags.sql  count_taxes.sql  get_branding_palette_id.sql  get_club_id.sql  get_club_id_by_subdomain.sql  get_event_counter.sql  get_event_id.sql  get_fee_id.sql  get_product_id.sql  get_user_id.sql  sum_parent_chain.sql  update_event.sql
scripts/: run_all.sh  summarize_benchmarks.rb
