[package]
name = "sqlite_tests_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-none", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
